hphp/test/zend/bad/Zend/tests/oct_overflow_32bit.php
<?php

$doubles = array(
	076545676543223,
	032325463734,
	077777797777777,
	07777777777777977777777777,
	03333333333333382222222222222,
	);

foreach ($doubles as $d) {
	$l = (double)$d;
	var_dump($l);
}

echo "Done\n";
?>